--- a/Docuementos/texto.html
+++ b/Docuementos/texto.html
@@ -60,7 +60,7 @@
             ideal para escribir contenido creativo, responder preguntas y
             obtener sugerencias.
           </p>
-          <video src="../Videos Texto/ChatGPT.mp4" controls></video>
+          <video src="../Videos Texto 1/ChatGPT.mp4" controls></video>
           <a href="https://chatgpt.com/" target="_blank" class="btn">Visitar</a>
         </div>
         <div class="tool-card">
@@ -71,7 +71,7 @@
             analizar y generar textos de alta calidad, permitiendo obtener
             insights rápidos y precisos en proyectos académicos o profesionales.
           </p>
-          <video src="../Videos Texto/Humata AI.mp4" controls></video>
+          <video src="../Videos Texto 2/Humata AI.mp4" controls></video>
           <a href="https://www.humata.ai/" target="_blank" class="btn">Visitar</a>
         </div>
         <div class="tool-card">
@@ -82,7 +82,7 @@
             sencilla, ideal para trabajos académicos y proyectos que requieran
             referencias precisas y bien formateadas.
           </p>
-          <video src="../Videos Texto/Scribbr.mp4" controls></video>
+          <video src="../Videos Texto 2/Scribbr.mp4" controls></video>
           <a
             href="https://www.scribbr.es/citar/generador/apa/"
             target="_blank"
@@ -97,7 +97,7 @@
             mejora la calidad de tus textos corrigiendo errores de gramática,
             sintaxis y ortografía en tiempo real.
           </p>
-          <video src="../Videos Texto/Mystilus.mp4" controls></video>
+          <video src="../Videos Texto 2/Mystilus.mp4" controls></video>
           <a href="https://www.mystilus.com/" target="_blank" class="btn">Visitar</a>
         </div>
         <div class="tool-card">
@@ -106,7 +106,7 @@
           <p>
             Fontshare es una plataforma gratuita de tipografías de alta calidad para diseñadores y desarrolladores. Ofrece una amplia colección de fuentes modernas y elegantes para uso personal y comercial.
           </p>
-          <video src="../Videos Texto/Fontshare.mp4" controls></video>
+          <video src="../Videos Texto 2/Fontshare.mp4" controls></video>
           <a href="https://www.fontshare.com/" target="_blank" class="btn">Visitar</a>
         </div>
         <div class="tool-card">
@@ -117,7 +117,7 @@
             análisis y la generación automática de textos, proporcionando
             resultados rápidos y personalizados para diversas aplicaciones.
           </p>
-          <video src="../Videos Texto/TXYZ AI.mp4" controls></video>
+          <video src="../Videos Texto 1/TXYZ AI.mp4" controls></video>
           <a href="https://app.txyz.ai/" target="_blank" class="btn">Visitar</a>
         </div>
         <div class="tool-card">
@@ -128,7 +128,7 @@
             inteligencia artificial, ayudando a identificar la originalidad de
             textos y garantizando autenticidad en proyectos escritos.
           </p>
-          <video src="../Videos Texto/AI Detector.mp4" controls></video>
+          <video src="../Videos Texto 1/AI Detector.mp4" controls></video>
 
           <a href="https://aidetector.pro/" target="_blank" class="btn">Visitar</a>
         </div>
@@ -140,7 +140,7 @@
             múltiples formatos, permitiendo crear referencias de manera automática
             y precisa para trabajos académicos y profesionales.
           </p>
-          <video src="../Videos Texto/Cite This For Me_.mp4" controls></video>
+          <video src="../Videos Texto 1/Cite This For Me_.mp4" controls></video>
           <a href="https://www.citethisforme.com/" target="_blank" class="btn">Visitar</a>
         </div>
       </section>
