--- a/imagenes.html
+++ b/imagenes.html
@@ -44,7 +44,7 @@
         <section class="tools">
             <div class="tool-card">
                 <h2>Remove.bg</h2>
-                <img src="Remove.bg.png" alt="Remove.bg en acción" />
+                <img src="../Version 3/Imagenes Imagenes/" alt="Remove.bg en acción" />
                 <p>Elimina fondos de imágenes automáticamente, permitiendo que los usuarios se concentren en la creatividad sin perder tiempo en ediciones complicadas.</p>
                 <video src="Remove.bg.mp4" controls></video>
                 <a href="https://www.remove.bg/es" target="_blank" class="btn">Visitar</a>
