--- a/imagenes.html
+++ b/imagenes.html
@@ -44,44 +44,44 @@
         <section class="tools">
             <div class="tool-card">
                 <h2>Remove.bg</h2>
-                <img src="../Version 3/Imagenes Imagenes/" alt="Remove.bg en acción" />
+                <img src="../Imagenes Imagenes/Remove.bg.png" alt="Remove.bg en acción" />
                 <p>Elimina fondos de imágenes automáticamente, permitiendo que los usuarios se concentren en la creatividad sin perder tiempo en ediciones complicadas.</p>
-                <video src="Remove.bg.mp4" controls></video>
+                <video src="../Videos Imagenes/Remove.bg.mp4" controls></video>
                 <a href="https://www.remove.bg/es" target="_blank" class="btn">Visitar</a>
             </div>
             <div class="tool-card">
                 <h2>Watermark Remover</h2>
-                <img src="Watermark Remover.jpeg" alt="Watermark Remover en acción" />
+                <img src="../Imagenes Imagenes/Watermark Remover.jpeg" alt="Watermark Remover en acción" />
                 <p>Elimina marcas de agua de tus imágenes fácilmente, ideal para quienes buscan presentar sus fotos sin distracciones ni interferencias de otros.</p>
-                <video src="Watermark Remover.mp4" controls></video>
+                <video src="../Videos Imagenes/Watermark Remover.mp4" controls></video>
                 <a href="https://www.watermarkremover.io/es" target="_blank" class="btn">Visitar</a>
             </div>
             <div class="tool-card">
                 <h2>Adobe Color</h2>
-                <img src="Adobe Color.png" alt="Adobe Color en acción" />
+                <img src="../Imagenes Imagenes/Adobe Color.png" alt="Adobe Color en acción" />
                 <p>Crea y explora paletas de colores que se adaptan a tus proyectos, facilitando la armonía visual y mejorando la estética de tus diseños.</p>
-                <video src="Adobe Color.mp4" controls></video>
+                <video src="../Videos Imagenes/Adobe Color.mp4" controls></video>
                 <a href="https://color.adobe.com/es/" target="_blank" class="btn">Visitar</a>
             </div>
             <div class="tool-card">
                 <h2>Pixlr</h2>
-                <img src="Pixlr.png" alt="Pixlr en acción" />
+                <img src="../Imagenes Imagenes/Pixlr.png" alt="Pixlr en acción" />
                 <p>Editor de fotos en línea que ofrece herramientas avanzadas para retocar imágenes, permitiendo que los usuarios se expresen visualmente con facilidad.</p>
-                <video src="Pixlr.mp4" controls></video>
+                <video src="../Videos Imagenes/Pixlr.mp4" controls></video>
                 <a href="https://pixlr.com/es/" target="_blank" class="btn">Visitar</a>
             </div>
             <div class="tool-card">
                 <h2>iLoveIMG</h2>
-                <img src="iLoveIMG.png" alt="iLoveIMG en acción" />
+                <img src="../Imagenes Imagenes/iLoveIMG.png" alt="iLoveIMG en acción" />
                 <p>Herramientas para editar imágenes en lote, lo que te permite procesar múltiples archivos de forma rápida y sencilla, ahorrando tiempo valioso.</p>
-                <video src="iLoveIMG.mp4" controls></video>
+                <video src="../Videos Imagenes/iLoveIMG.mp4" controls></video>
                 <a href="https://www.iloveimg.com/es" target="_blank" class="btn">Visitar</a>
             </div>
             <div class="tool-card">
                 <h2>Pixabay</h2>
-                <img src="Pixabay.png" alt="Pixabay en acción" />
+                <img src="../Imagenes Imagenes/Pixabay.png" alt="Pixabay en acción" />
                 <p>Banco de imágenes gratuitas que proporciona fotografías de alta calidad, ideales para tus proyectos creativos y comerciales.</p>
-                <video src="Pixabay.mp4" controls></video>
+                <video src="../Videos Imagenes/Pixabay.mp4" controls></video>
                 <a href="https://pixabay.com/" target="_blank" class="btn">Visitar</a>
             </div>
         </section>
