--- a/noticias.html
+++ b/noticias.html
@@ -44,7 +44,7 @@
         <section class="news-section reveal fade-bottom">
             <div class="news-container">
                 <article class="news-card featured-news">
-                    <img src="../Imagenes/1.jpeg" alt="Noticia destacada" class="news-image">
+                    <img src="../Imagenes Noticias/1.jpeg" alt="Noticia destacada" class="news-image">
                     <div class="news-content">
                         <h2>Nueva herramienta de IA revoluciona la edición de video</h2>
                         <p class="news-meta">Por Juan Pérez | 10 de junio, 2023</p>
@@ -55,7 +55,7 @@
 
                 <div class="news-grid">
                     <article class="news-card">
-                        <img src="../Imagenes/Gemini_Generated_Image_q6hhbxq6hhbxq6hh.jpeg" alt="Noticia 1" class="news-image">
+                        <img src="../Imagenes Noticias/2.jpeg" alt="Noticia 1" class="news-image">
                         <div class="news-content">
                             <h3>Actualización masiva en herramientas de diseño gráfico</h3>
                             <p class="news-meta">Por Ana García | 5 de junio, 2023</p>
@@ -64,7 +64,7 @@
                         </div>
                     </article>
                     <article class="news-card">
-                        <img src="placeholder-news-2.jpg" alt="Noticia 2" class="news-image">
+                        <img src="../Imagenes Noticias/3.jpg" alt="Noticia 2" class="news-image">
                         <div class="news-content">
                             <h3>El auge de los podcasts: Herramientas para creadores de contenido audio</h3>
                             <p class="news-meta">Por Carlos Rodríguez | 1 de junio, 2023</p>
