--- a/videos.html
+++ b/videos.html
@@ -36,9 +36,22 @@
     </header>
 
     <main>
-        <section class="hero">
-            <h1>Herramientas de Video</h1>
-            <p>Próximamente: Las mejores herramientas para edición de video</p>
+        <section class="tools">
+            <div class="tool-card">
+                <h3>Pika Art</h3>
+                <img src="../Imagenes Videos/Pika Art.png" alt="Online Audio Converter en acción" />
+                <p>Pika Art es una herramienta de inteligencia artificial que permite generar imágenes personalizadas a partir de descripciones de texto, utilizando avanzados modelos de aprendizaje profundo para crear arte visual único.</p>
+                <video src="../Videos Videos/Pika Art.mp4" controls></video>
+                <a href="https://pika.art/try" target="_blank" class="btn">Visitar</a>
+            </div>
+            <div class="tool-card">
+                <h3>Steve AI</h3>
+                <img src="../Imagenes Videos/Steve AI" alt="MP3 Cut en acción" />
+                <p>Steve AI es una plataforma de inteligencia artificial que permite crear videos animados automáticamente a partir de texto, facilitando la generación de contenido multimedia con gráficos y personajes animados en minutos.</p>
+                <video src="../Videos Videos/Steve AI.mp4" controls></video>
+                <a href="https://www.steve.ai/" target="_blank" class="btn">Visitar</a>
+            </div>
+
         </section>
 
         <section class="coming-soon">
