--- a/actividades.html
+++ b/actividades.html
@@ -36,74 +36,33 @@
     </header>
 
     <main>
-        <section class="hero activities-hero">
-            <h1>Actividades</h1>
-            <p>Explora nuestras actividades interactivas</p>
-        </section>
-
-        <section class="activities-section reveal fade-bottom">
-            <h2>Actividades destacadas</h2>
-            <div class="activities-grid">
-                <div class="activity-card">
-                    <div class="activity-icon"><i class="fas fa-pencil-alt"></i></div>
-                    <h3>Taller de escritura creativa</h3>
-                    <p>Desarrolla tus habilidades de escritura con nuestro taller interactivo.</p>
-                    <a href="#" class="btn">Participar</a>
-                </div>
-                <div class="activity-card">
-                    <div class="activity-icon"><i class="fas fa-camera"></i></div>
-                    <h3>Desafío fotográfico semanal</h3>
-                    <p>Participa en nuestro desafío semanal y mejora tus habilidades fotográficas.</p>
-                    <a href="#" class="btn">Unirse al desafío</a>
-                </div>
-                <div class="activity-card">
-                    <div class="activity-icon"><i class="fas fa-music"></i></div>
-                    <h3>Composición musical colaborativa</h3>
-                    <p>Crea música con otros usuarios en tiempo real.</p>
-                    <a href="#" class="btn">Componer ahora</a>
-                </div>
-                <div class="activity-card">
-                    <div class="activity-icon"><i class="fas fa-film"></i></div>
-                    <h3>Concurso de cortometrajes</h3>
-                    <p>Participa en nuestro concurso mensual de cortometrajes.</p>
-                    <a href="#" class="btn">Inscribirse</a>
-                </div>
+        <section class="hero">
+            <div class="hero-content">
+                <h1>Actividades</h1>
+                <p>Explora nuestras actividades interactivas para mejorar tus habilidades multimedia.</p>
             </div>
         </section>
 
-        <section class="upcoming-activities reveal fade-bottom">
-            <h2>Próximas actividades</h2>
-            <div class="timeline">
-                <div class="timeline-item">
-                    <div class="timeline-icon">
-                        <i class="fas fa-calendar-alt"></i>
-                    </div>
-                    <div class="timeline-content">
-                        <h3>Webinar: Técnicas avanzadas de edición de fotos</h3>
-                        <p>Fecha: 15 de julio, 2023</p>
-                        <a href="#" class="btn">Reservar plaza</a>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-icon">
-                        <i class="fas fa-calendar-alt"></i>
-                    </div>
-                    <div class="timeline-content">
-                        <h3>Maratón de diseño gráfico</h3>
-                        <p>Fecha: 5-7 de agosto, 2023</p>
-                        <a href="#" class="btn">Más información</a>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-icon">
-                        <i class="fas fa-calendar-alt"></i>
-                    </div>
-                    <div class="timeline-content">
-                        <h3>Taller de producción de podcasts</h3>
-                        <p>Fecha: 20 de agosto, 2023</p>
-                        <a href="#" class="btn">Inscribirse</a>
-                    </div>
-                </div>
+        <section class="activities reveal fade-bottom">
+            <div class="activity-card">
+                <h2>Edición de Imágenes</h2>
+                <p>Aprende a utilizar herramientas de edición de imágenes con este tutorial interactivo.</p>
+                <a href="#" class="btn">Comenzar Actividad</a>
+            </div>
+            <div class="activity-card">
+                <h2>Creación de Videos</h2>
+                <p>Descubre cómo crear videos impactantes con nuestro curso paso a paso.</p>
+                <a href="#" class="btn">Comenzar Actividad</a>
+            </div>
+            <div class="activity-card">
+                <h2>Edición de Audio</h2>
+                <p>Mejora tus habilidades de edición de audio con ejercicios prácticos.</p>
+                <a href="#" class="btn">Comenzar Actividad</a>
+            </div>
+            <div class="activity-card">
+                <h2>Gestión de Documentos</h2>
+                <p>Aprende a manejar eficientemente tus documentos con nuestras actividades guiadas.</p>
+                <a href="#" class="btn">Comenzar Actividad</a>
             </div>
         </section>
     </main>
@@ -112,7 +71,7 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h3>Sobre WebFlex</h3>
-                <p>WebFlex es tu centro de herramientas multimedia, diseñado para potenciar tu creatividad y productividad.</p>
+                <p>WebFlex es tu centro de herramientas multimedia, diseñado para potenciar tu creatividad y productividad en la era digital.</p>
             </div>
             <div class="footer-section">
                 <h3>Síguenos</h3>
@@ -124,6 +83,7 @@
             </div>
         </div>
         <div class="footer-bottom">
+            <p>&copy; <span class="copyright-year"></span> WebFlex. Todos los derechos reservados.</p>
             <a href="index.html" class="btn btn-primary">Volver a la página principal</a>
         </div>
     </footer>
