--- a/audio.html
+++ b/audio.html
@@ -37,41 +37,42 @@
 
     <main>
         <section class="hero">
-            <h1>Herramientas de Audio</h1>
-            <p>Manipula y mejora tus archivos de audio con facilidad. Explora herramientas eficientes que optimizan tu flujo de trabajo y potencian tu creatividad en el sonido.</p>
+            <div class="hero-content">
+                <h1>Herramientas de Audio</h1>
+                <p>Manipula y mejora tus archivos de audio con facilidad. Explora herramientas eficientes que optimizan tu flujo de trabajo y potencian tu creatividad en el sonido.</p>
+            </div>
         </section>
 
-        <section class="tools">
+        <section class="tools reveal fade-bottom">
             <div class="tool-card">
-                <h3>Online Audio Converter</h3>
+                <h2>Online Audio Converter</h2>
                 <img src="online-audio-converter-placeholder.jpg" alt="Online Audio Converter en acción" />
                 <p>Convierte archivos de audio a diferentes formatos de manera sencilla, ideal para usuarios que buscan rapidez y eficiencia en la edición de sonido.</p>
                 <video src="audio-converter-demo.mp4" controls></video>
                 <a href="https://online-audio-converter.com/es/" target="_blank" class="btn">Visitar</a>
             </div>
             <div class="tool-card">
-                <h3>MP3 Cut</h3>
+                <h2>MP3 Cut</h2>
                 <img src="mp3cut-placeholder.jpg" alt="MP3 Cut en acción" />
                 <p>Corta y edita archivos MP3 en línea de forma sencilla, permitiendo a los usuarios seleccionar y ajustar fragmentos de audio sin complicaciones.</p>
                 <video src="mp3cut-demo.mp4" controls></video>
                 <a href="https://www.mp3cut.net" target="_blank" class="btn">Visitar</a>
             </div>
             <div class="tool-card">
-                <h3>Bear Audio Tool</h3>
+                <h2>Bear Audio Tool</h2>
                 <img src="bear-audio-tool-placeholder.jpg" alt="Bear Audio Tool en acción" />
                 <p>Herramienta todo en uno para la edición de audio, ofreciendo funcionalidades como cortar, unir y modificar pistas de manera eficiente y práctica.</p>
                 <video src="bear-audio-demo.mp4" controls></video>
                 <a href="https://www.bearaudiotool.com/sp/" target="_blank" class="btn">Visitar</a>
             </div>
         </section>
-
     </main>
 
     <footer>
         <div class="footer-content">
             <div class="footer-section">
                 <h3>Sobre WebFlex</h3>
-                <p>WebFlex es tu centro de herramientas multimedia, diseñado para potenciar tu creatividad y productividad.</p>
+                <p>WebFlex es tu centro de herramientas multimedia, diseñado para potenciar tu creatividad y productividad en la era digital.</p>
             </div>
             <div class="footer-section">
                 <h3>Síguenos</h3>
@@ -83,6 +84,7 @@
             </div>
         </div>
         <div class="footer-bottom">
+            <p>&copy; <span class="copyright-year"></span> WebFlex. Todos los derechos reservados.</p>
             <a href="index.html" class="btn btn-primary">Volver a la página principal</a>
         </div>
     </footer>
