--- a/documentos.html
+++ b/documentos.html
@@ -37,11 +37,13 @@
 
     <main>
         <section class="hero">
-            <h1>Herramientas de Documentos</h1>
-            <p>Gestiona y edita tus documentos en línea</p>
+            <div class="hero-content">
+                <h1>Herramientas de Documentos</h1>
+                <p>Gestiona y edita tus documentos en línea con nuestras potentes herramientas.</p>
+            </div>
         </section>
 
-        <section class="tools">
+        <section class="tools reveal fade-bottom">
             <div class="tool-card">
                 <h2>iLovePDF</h2>
                 <img src="ilovepdf-placeholder.jpg" alt="iLovePDF en acción" />
@@ -63,7 +65,7 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h3>Sobre WebFlex</h3>
-                <p>WebFlex es tu centro de herramientas multimedia, diseñado para potenciar tu creatividad y productividad.</p>
+                <p>WebFlex es tu centro de herramientas multimedia, diseñado para potenciar tu creatividad y productividad en la era digital.</p>
             </div>
             <div class="footer-section">
                 <h3>Síguenos</h3>
@@ -75,6 +77,7 @@
             </div>
         </div>
         <div class="footer-bottom">
+            <p>&copy; <span class="copyright-year"></span> WebFlex. Todos los derechos reservados.</p>
             <a href="index.html" class="btn btn-primary">Volver a la página principal</a>
         </div>
     </footer>
