--- a/videos.html
+++ b/videos.html
@@ -36,27 +36,33 @@
     </header>
 
     <main>
-        <section class="tools">
+        <section class="hero">
+            <div class="hero-content">
+                <h1>Herramientas de Video</h1>
+                <p>Descubre herramientas innovadoras para crear y editar videos impresionantes.</p>
+            </div>
+        </section>
+
+        <section class="tools reveal fade-bottom">
             <div class="tool-card">
-                <h3>Pika Art</h3>
-                <img src="../Imagenes Videos/Pika Art.png" alt="Online Audio Converter en acción" />
+                <h2>Pika Art</h2>
+                <img src="../Imagenes Videos/Pika Art.png" alt="Pika Art en acción" />
                 <p>Pika Art es una herramienta de inteligencia artificial que permite generar imágenes personalizadas a partir de descripciones de texto, utilizando avanzados modelos de aprendizaje profundo para crear arte visual único.</p>
                 <video src="../Videos Videos/Pika Art.mp4" controls></video>
                 <a href="https://pika.art/try" target="_blank" class="btn">Visitar</a>
             </div>
             <div class="tool-card">
-                <h3>Steve AI</h3>
-                <img src="../Imagenes Videos/Steve AI" alt="MP3 Cut en acción" />
+                <h2>Steve AI</h2>
+                <img src="../Imagenes Videos/Steve AI" alt="Steve AI en acción" />
                 <p>Steve AI es una plataforma de inteligencia artificial que permite crear videos animados automáticamente a partir de texto, facilitando la generación de contenido multimedia con gráficos y personajes animados en minutos.</p>
                 <video src="../Videos Videos/Steve AI.mp4" controls></video>
                 <a href="https://www.steve.ai/" target="_blank" class="btn">Visitar</a>
             </div>
-
         </section>
 
-        <section class="coming-soon">
+        <section class="coming-soon reveal fade-bottom">
             <h2>Estamos trabajando en ello</h2>
-            <p>Pronto tendremos una selección de las mejores herramientas de video en línea. ¡Vuelve pronto!</p>
+            <p>Pronto tendremos una selección más amplia de las mejores herramientas de video en línea. ¡Vuelve pronto para descubrir más!</p>
         </section>
     </main>
 
@@ -64,7 +70,7 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h3>Sobre WebFlex</h3>
-                <p>WebFlex es tu centro de herramientas multimedia, diseñado para potenciar tu creatividad y productividad.</p>
+                <p>WebFlex es tu centro de herramientas multimedia, diseñado para potenciar tu creatividad y productividad en la era digital.</p>
             </div>
             <div class="footer-section">
                 <h3>Síguenos</h3>
@@ -76,6 +82,7 @@
             </div>
         </div>
         <div class="footer-bottom">
+            <p>&copy; <span class="copyright-year"></span> WebFlex. Todos los derechos reservados.</p>
             <a href="index.html" class="btn btn-primary">Volver a la página principal</a>
         </div>
     </footer>
