--- a/contactos.html
+++ b/contactos.html
@@ -1,189 +1,95 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebFlex - Contacto</title>
-    <link rel="stylesheet" href="styles.css" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WebFlex - Contactos</title>
+    <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js" defer></script>
-  </head>
-  <body>
+</head>
+<body>
     <header>
-      <nav>
-        <a href="index.html" class="logo">WebFlex</a>
-        <ul class="nav-links">
-          <li class="dropdown">
-            <a href="#">Herramientas</a>
-            <ul class="dropdown-content">
-              <li><a href="texto.html">Texto</a></li>
-              <li><a href="imagenes.html">Imágenes</a></li>
-              <li><a href="videos.html">Videos</a></li>
-              <li><a href="audio.html">Audio</a></li>
-              <li><a href="documentos.html">Documentos</a></li>
+        <nav>
+            <a href="index.html" class="logo">WebFlex</a>
+            <ul class="nav-links">
+                <li class="dropdown">
+                    <a href="#">Herramientas</a>
+                    <ul class="dropdown-content">
+                        <li><a href="texto.html">Texto</a></li>
+                        <li><a href="imagenes.html">Imágenes</a></li>
+                        <li><a href="videos.html">Videos</a></li>
+                        <li><a href="audio.html">Audio</a></li>
+                        <li><a href="documentos.html">Documentos</a></li>
+                    </ul>
+                </li>
+                <li><a href="actividades.html">Actividades</a></li>
+                <li><a href="noticias.html">Noticias</a></li>
+                <li><a href="contactos.html">Contactos</a></li>
             </ul>
-          </li>
-          <li><a href="actividades.html">Actividades</a></li>
-          <li><a href="noticias.html">Noticias</a></li>
-          <li><a href="contactos.html">Contactos</a></li>
-        </ul>
-        <div class="burger">
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
-        </div>
-      </nav>
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+        </nav>
     </header>
 
     <main>
-      <section class="hero contact-hero">
-        <h1>Contacto</h1>
-        <p>Déjanos tu reseña o contáctanos</p>
-      </section>
+        <section class="hero">
+            <div class="hero-content">
+                <h1>Contacto</h1>
+                <p>¿Tienes alguna pregunta o sugerencia? ¡Nos encantaría escucharte!</p>
+            </div>
+        </section>
 
-      <section class="contact-form-section reveal fade-bottom">
-        <div class="contact-container">
-          <div class="contact-info">
-            <form id="review-form" class="contact-form">
-              <h2>Formulario de contacto</h2>
-              <div class="form-group">
-                <label for="name">Nombre:</label>
-                <input type="text" id="name" name="name" required />
-              </div>
-              <div class="form-group">
-                <label for="email">Correo electrónico:</label>
-                <input type="email" id="email" name="email" required />
-              </div>
-              <div class="form-group">
-                <label for="message">Mensaje:</label>
-                <textarea id="message" name="message" required></textarea>
-              </div>
-              <div class="form-group">
-                <label for="rating">Valoración:</label>
-                <div class="star-rating">
-                  <input
-                    type="radio"
-                    id="star5"
-                    name="rating"
-                    value="5"
-                  /><label for="star5"></label>
-                  <input
-                    type="radio"
-                    id="star4"
-                    name="rating"
-                    value="4"
-                  /><label for="star4"></label>
-                  <input
-                    type="radio"
-                    id="star3"
-                    name="rating"
-                    value="3"
-                  /><label for="star3"></label>
-                  <input
-                    type="radio"
-                    id="star2"
-                    name="rating"
-                    value="2"
-                  /><label for="star2"></label>
-                  <input
-                    type="radio"
-                    id="star1"
-                    name="rating"
-                    value="1"
-                  /><label for="star1"></label>
+        <section class="contact-form-section">
+            <div class="contact-container">
+                <div class="contact-info">
+                    <h2>Información de Contacto</h2>
+                    <p><i class="fas fa-envelope"></i> Email: info@webflex.com</p>
+                    <p><i class="fas fa-phone"></i> Teléfono: +1 234 567 890</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Dirección: 123 Calle Principal, Ciudad, País</p>
                 </div>
-              </div>
-              <button type="submit" class="btn">Enviar reseña</button>
-            </form>
-          </div>
-          <h2>Información de contacto</h2>
-          <p>
-            <i class="fas fa-map-marker-alt"></i> Calle Ejemplo, 123, Ciudad
-          </p>
-          <p><i class="fas fa-phone"></i> +34 123 456 789</p>
-          <p><i class="fas fa-envelope"></i> info@webflex.com</p>
-          <div class="social-icons">
-            <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-          </div>
-        </div>
-      </section>
+                <form id="contact-form" class="contact-form">
+                    <h2>Envíanos un Mensaje</h2>
+                    <div class="form-group">
+                        <label for="name">Nombre</label>
+                        <input type="text" id="name" name="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Mensaje</label>
+                        <textarea id="message" name="message" required></textarea>
+                    </div>
+                    <button type="submit" class="btn">Enviar Mensaje</button>
+                </form>
+            </div>
+        </section>
     </main>
 
     <footer>
-      <div class="footer-content">
-        <div class="footer-section">
-          <h3>Sobre WebFlex</h3>
-          <p>
-            WebFlex es tu centro de herramientas multimedia, diseñado para
-            potenciar tu creatividad y productividad.
-          </p>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Sobre WebFlex</h3>
+                <p>WebFlex es tu centro de herramientas multimedia, diseñado para potenciar tu creatividad y productividad en la era digital.</p>
+            </div>
+            <div class="footer-section">
+                <h3>Síguenos</h3>
+                <div class="social-icons">
+                    <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
         </div>
-        <div class="footer-section">
-          <h3>Síguenos</h3>
-          <div class="social-icons">
-            <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-          </div>
+        <div class="footer-bottom">
+            <p>&copy; <span class="copyright-year"></span> WebFlex. Todos los derechos reservados.</p>
+            <a href="index.html" class="btn btn-primary">Volver a la página principal</a>
         </div>
-      </div>
-      <div class="footer-bottom">
-        <a href="index.html" class="btn btn-primary"
-          >Volver a la página principal</a
-        >
-      </div>
     </footer>
-
-    <script>
-      document
-        .getElementById("review-form")
-        .addEventListener("submit", function (e) {
-          e.preventDefault();
-          alert("Gracias por tu reseña. La hemos recibido correctamente.");
-          this.reset();
-        });
-
-      // Gráfico de satisfacción
-      var ctx = document.getElementById("satisfactionChart").getContext("2d");
-      var satisfactionChart = new Chart(ctx, {
-        type: "bar",
-        data: {
-          labels: ["Excelente", "Bueno", "Regular", "Malo", "Muy malo"],
-          datasets: [
-            {
-              label: "Nivel de satisfacción",
-              data: [65, 20, 10, 3, 2],
-              backgroundColor: [
-                "rgba(75, 192, 192, 0.6)",
-                "rgba(54, 162, 235, 0.6)",
-                "rgba(255, 206, 86, 0.6)",
-                "rgba(255, 159, 64, 0.6)",
-                "rgba(255, 99, 132, 0.6)",
-              ],
-              borderColor: [
-                "rgba(75, 192, 192, 1)",
-                "rgba(54, 162, 235, 1)",
-                "rgba(255, 206, 86, 1)",
-                "rgba(255, 159, 64, 1)",
-                "rgba(255, 99, 132, 1)",
-              ],
-              borderWidth: 1,
-            },
-          ],
-        },
-        options: {
-          responsive: true,
-          scales: {
-            y: {
-              beginAtZero: true,
-              max: 100,
-            },
-          },
-        },
-      });
-    </script>
-  </body>
+</body>
 </html>
