--- a/imagenes.html
+++ b/imagenes.html
@@ -37,11 +37,13 @@
 
     <main>
         <section class="hero">
-            <h1>Herramientas de Imágenes</h1>
-            <p>Edita y mejora tus imágenes en línea de forma fácil y rápida utilizando las herramientas recomendadas a continuación.</p>
+            <div class="hero-content">
+                <h1>Herramientas de Imágenes</h1>
+                <p>Edita y mejora tus imágenes en línea de forma fácil y rápida utilizando las herramientas recomendadas a continuación.</p>
+            </div>
         </section>
 
-        <section class="tools">
+        <section class="tools reveal fade-bottom">
             <div class="tool-card">
                 <h2>Remove.bg</h2>
                 <img src="../Imagenes Imagenes/Remove.bg.png" alt="Remove.bg en acción" />
@@ -92,8 +94,8 @@
             <div class="footer-section">
                 <h3>Sobre WebFlex</h3>
                 <p>
-                    WebFlex es tu centro de herramientas multimedia, diseñado para
-                    potenciar tu creatividad y productividad.
+                    WebFlex  es tu centro de herramientas multimedia, diseñado para
+                    potenciar tu creatividad y productividad en la era digital.
                 </p>
             </div>
             <div class="footer-section">
@@ -106,6 +108,7 @@
             </div>
         </div>
         <div class="footer-bottom">
+            <p>&copy; <span class="copyright-year"></span> WebFlex. Todos los derechos reservados.</p>
             <a href="index.html" class="btn btn-primary">Volver a la página principal</a>
         </div>
     </footer>
