--- a/index.html
+++ b/index.html
@@ -1,73 +1,107 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebFlex</title>
+    <title>WebFlex - Tu Centro de Herramientas Multimedia</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
     <script src="script.js" defer></script>
-  </head>
-  <body>
+</head>
+<body>
     <header>
-      <nav>
-        <a href="index.html" class="logo">WebFlex</a>
-        <ul class="nav-links">
-          <li class="dropdown">
-            <a href="#">Herramientas</a>
-            <ul class="dropdown-content">
-              <li><a href="texto.html">Texto</a></li>
-              <li><a href="imagenes.html">Imágenes</a></li>
-              <li><a href="videos.html">Videos</a></li>
-              <li><a href="audio.html">Audio</a></li>
-              <li><a href="documentos.html">Documentos</a></li>
+        <nav>
+            <a href="index.html" class="logo">WebFlex</a>
+            <ul class="nav-links">
+                <li class="dropdown">
+                    <a href="#">Herramientas</a>
+                    <ul class="dropdown-content">
+                        <li><a href="texto.html">Texto</a></li>
+                        <li><a href="imagenes.html">Imágenes</a></li>
+                        <li><a href="videos.html">Videos</a></li>
+                        <li><a href="audio.html">Audio</a></li>
+                        <li><a href="documentos.html">Documentos</a></li>
+                    </ul>
+                </li>
+                <li><a href="actividades.html">Actividades</a></li>
+                <li><a href="noticias.html">Noticias</a></li>
+                <li><a href="contactos.html">Contactos</a></li>
             </ul>
-          </li>
-          <li><a href="actividades.html">Actividades</a></li>
-          <li><a href="noticias.html">Noticias</a></li>
-          <li><a href="contactos.html">Contactos</a></li>
-        </ul>
-        <div class="burger">
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
-        </div>
-      </nav>
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+        </nav>
     </header>
 
     <main>
-      <section class="hero">
-        <h1>Bienvenido a WebFlex</h1>
-        <p>
-          ¡Tu espacio definitivo para explorar y acceder a una variedad de
-          herramientas multimedia! En WebFlex, hemos recopilado las mejores
-          soluciones para la edición y generación de contenido. Ya sea que
-          necesites trabajar con texto, imágenes, videos o documentos,
-          encontrarás aquí una selección curada de herramientas de edición y
-          generación asistidas por inteligencia artificial.
-        </p>
-      </section>
+        <section class="hero">
+            <div class="hero-content">
+                <h1>Bienvenido a WebFlex</h1>
+                <p>
+                    Tu espacio definitivo para explorar y acceder a una variedad de
+                    herramientas multimedia de vanguardia.
+                </p>
+                <a href="#tools" class="cta-button">Explorar Herramientas</a>
+            </div>
+        </section>
+
+        <section id="tools" class="tools reveal fade-bottom">
+            <div class="tool-card">
+                <div class="tool-icon"><i class="fas fa-font"></i></div>
+                <h2>Herramientas de Texto</h2>
+                <p>Potencia tu contenido escrito con nuestras herramientas de edición y generación de texto.</p>
+                <a href="texto.html" class="btn">Explorar</a>
+            </div>
+            <div class="tool-card">
+                <div class="tool-icon"><i class="fas fa-image"></i></div>
+                <h2>Herramientas de Imágenes</h2>
+                <p>Edita y mejora tus imágenes con nuestras potentes herramientas de procesamiento visual.</p>
+                <a href="imagenes.html" class="btn">Explorar</a>
+            </div>
+            <div class="tool-card">
+                <div class="tool-icon"><i class="fas fa-video"></i></div>
+                <h2>Herramientas de Video</h2>
+                <p>Crea y edita videos impresionantes con nuestra suite de herramientas de edición de video.</p>
+                <a href="videos.html" class="btn">Explorar</a>
+            </div>
+            <div class="tool-card">
+                <div class="tool-icon"><i class="fas fa-volume-up"></i></div>
+                <h2>Herramientas de Audio</h2>
+                <p>Manipula y mejora tus archivos de audio con nuestras herramientas especializadas.</p>
+                <a href="audio.html" class="btn">Explorar</a>
+            </div>
+            <div class="tool-card">
+                <div class="tool-icon"><i class="fas fa-file-alt"></i></div>
+                <h2>Herramientas de Documentos</h2>
+                <p>Gestiona y edita tus documentos con eficiencia usando nuestras herramientas avanzadas.</p>
+                <a href="documentos.html" class="btn">Explorar</a>
+            </div>
+        </section>
     </main>
 
     <footer>
-      <div class="footer-content">
-        <div class="footer-section">
-          <h3>Sobre WebFlex</h3>
-          <p>
-            WebFlex es tu centro de herramientas multimedia, diseñado para
-            potenciar tu creatividad y productividad.
-          </p>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Sobre WebFlex</h3>
+                <p>
+                    WebFlex es tu centro de herramientas multimedia, diseñado para
+                    potenciar tu creatividad y productividad en la era digital.
+                </p>
+            </div>
+            <div class="footer-section">
+                <h3>Síguenos</h3>
+                <div class="social-icons">
+                    <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
         </div>
-        <div class="footer-section">
-          <h3>Síguenos</h3>
-          <div class="social-icons">
-            <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-          </div>
+        <div class="footer-bottom">
+            <p>&copy; <span class="copyright-year"></span> WebFlex. Todos los derechos reservados.</p>
         </div>
-      </div>
-      <div class="footer-bottom"></div>
     </footer>
-  </body>
+</body>
 </html>
